Possibly fix a crash when switching animated documents

We shouldn't delete KisPlaybackEngineQT::Private::measure on every
stop of the playback, because the timer events may be randomly
postponed and we can end up reading from a null location.

BUG:473760